Fix alignment property in button styles

--- a/css/style.css
+++ b/css/style.css
@@ -219,7 +219,8 @@ nav {
 button {
   cursor: pointer;
   display:flex;
-  align-item:center;
+  align-items:center;
+  justify-content:center;
 }
 
 .primary-btn {
